fix: ZIG-1086 Improve exchange accounts display on small screens

--- a/src/components/Balance/TotalEquity/TotalEquity.scss
+++ b/src/components/Balance/TotalEquity/TotalEquity.scss
@@ -19,7 +19,7 @@
 }
 
 .modalFilter {
-  margin: 16px 0 0 auto;
+  margin-left: auto;
 }
 
 @include media("<=sm") {
