--- a/src/components/Graphs/Doughnut/Doughnut.scss
+++ b/src/components/Graphs/Doughnut/Doughnut.scss
@@ -5,8 +5,8 @@
   width: 100%;
 
   .canvasParent {
-    // height: 100%;
-    flex: 1;
+    height: 100%;
+    // flex: 1;
     position: relative;
     // width: 100%;
   }
@@ -26,11 +26,12 @@
       flex-direction: row;
       flex-wrap: wrap;
       //   grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
-      height: 80px;
+      //   height: 80px;
       margin-top: 20px;
 
       li {
-        flex-basis: 107px;
+        flex-basis: 125px;
+        padding: 8px 0;
         // padding-right: 30px;
       }
     }
